Back to project Button
Made a link to main proect.

--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
       - you can have that back now my slave human didn't give me any food so i pooped on the floor kitten is playing
       with dead mouse run outside as soon as door open and taco cat backwards spells taco cat.</p>
 </div>
-
+<a href="index.html">Go back to projects!</a>
 </body>
 
 </html>
