--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 <h1>Elijahs Web Based Programming Projects</h1>
 <a href="home.html">Project 1</a>
+<a href="zengarden.html">Zen Garden</a>
 </body>
 
 </html>
