--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1>Elijahs Web Based Programming Projects</h1>
 <a href="home.html">Project 1</a>
 <a href="zengarden.html">Zen Garden</a>
-<a href="index.html">Interactive Javascript Project</a>
+<a href="space/spaceship.html">Interactive Javascript Project</a>
 </body>
 
 </html>
