--- a/space/spaceship.html
+++ b/space/spaceship.html
@@ -13,7 +13,7 @@
 <div class="block">
   <h3>Instructions</h3>
 <p id=block-text>To move the spaceship, toggle the up, down, left, and right keys to move the ship 50 pixels in any direction. To reset the ships location, click "reset".</p></div>
-  <a href="elijahrodrigues.github.io/index.html>">Return to main page!</a>
+  <a href="../index.html>">Return to main page!</a>
 <div class="buttons">
   <input type="button" onclick="on_up()">Up</input>
   <input type="button" onclick="on_down()">Down</input>
