Updated link to my latest project
latest project link

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <a href="home.html">Project 1</a>
 <a href="zengarden.html">Zen Garden</a>
 <a href="space/spaceship.html">Interactive Javascript Project</a>
+<a href="http://web.cs.georgefox.edu/~erodrigues22/index.html">Javascript Web App</a>
 </body>
 
 </html>
