--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 </head>
 
 <body>
-<h1>Elijahs Web Based Programming Projects</h1>
-<a href="home.html">Project 1</a>
-<a href="zengarden.html">Zen Garden</a>
-<a href="space/spaceship.html">Interactive Javascript Project</a>
-<a href="http://web.cs.georgefox.edu/~erodrigues22/index.html">Javascript Web App</a>
+<h1>Web Projects: </h1>
+<p>While taking George Fox Universitys <em>Web Based Programming</em> course, I built several projects, ranging from a simple use of HTML, all the way to an interactive website with dynamic content, and calls to an API.</p>
+<h2>Projects:
+<ul>
+<li><a href="home.html">Project 1</a></li>
+<li><a href="zengarden.html">Zen Garden</a></li>
+<li><a href="space/spaceship.html">Interactive Javascript Project</a></li>
+<li><a href="http://web.cs.georgefox.edu/~erodrigues22/index.html">Javascript Web App</a>
+<p>This link will only run on the University network for security reasons.</p></li>
+</ul>
+
 </body>
 
 </html>
