Updated Index page.
Updated index page.

--- a/index.html
+++ b/index.html
@@ -5,21 +5,29 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Lord of the Rings Central</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="index.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-<h1>Web Projects: </h1>
+<header>
+<h1>Elijah Rodrigues: Web Projects Portfolio</h1>
 <p>While taking George Fox Universitys <em>Web Based Programming</em> course, I built several projects, ranging from a simple use of HTML, all the way to an interactive website with dynamic content, and calls to an API.</p>
-<h2>Projects:
+</header>
+<div id="projects">
+<h2>Projects:</h2>
 <ul>
-<li><a href="home.html">Project 1</a></li>
-<li><a href="zengarden.html">Zen Garden</a></li>
-<li><a href="space/spaceship.html">Interactive Javascript Project</a></li>
-<li><a href="http://web.cs.georgefox.edu/~erodrigues22/index.html">Javascript Web App</a>
-<p>This link will only run on the University network for security reasons.</p></li>
+<li><a href="home.html">HTML Project</a><p class='tile'>Website showcasing basic HTML properities such as list, tables, images, etc. Showcases multiple pages. </p></li>
+<li><a href="zengarden.html">CSS Zen Garden</a><p class='tile'>Showcase the ability of CSS to dramatically modify the style of a website. </p></li>
+<li><a href="space/spaceship.html">Interactive Javascript Project</a><p class='tile'>Uses Javascript to create an interactive website. My design implements user inputs to modify the location of a spaceship image, wirh a javascript animation of the rocket booster. </p></li>
+<li><a href="http://web.cs.georgefox.edu/~erodrigues22/index.html">Javascript Web App</a><p class='tile'>This project implements an API provided by the instructor to build a Web App to log in a user, and create and show post and replies.</p></li>
 </ul>
+</div>
 
+<footer>
+  <a href="www.linkedin.com/in/elijahrodrigues">LinkedIn Profile</a> 
+  <h4>Skills Demonstrated:</h4>
+  <p><b>Languages:</b> HTML, CSS, Javascript  <b>Software:</b> VS Code, Replit, GitHub repository.</p>
+</footer>
 </body>
 
 </html>
